[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elexon-dl"
version = "0.2.0"
description = "Spec-driven async Elexon/BMRS crawler (date×SP, from/to, publish slots). JSONL by default."
readme = "README.md"
requires-python = ">=3.10"
license = {text="MIT"}
authors = [{name="Dan Kalms"}]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "python-dateutil>=2.9.post0",
  "pandas>=2.2",
  "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
parquet = ["pyarrow>=16.0.0"]
dev = [
  "pytest>=8.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "build>=1.2.1",
]

[project.scripts]
elexon-dl = "elexon_dl.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP","SIM","ERA"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
